fix figcaption in dark mode

--- a/public/css/dark-mode.css
+++ b/public/css/dark-mode.css
@@ -33,7 +33,8 @@
 	label,
 	legend,
 	input[type="radio"]:disabled + label::before,
-	li {
+	li,
+	figcaption {
 		color: white !important;
 	}
 
